--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -8,7 +8,184 @@
   border-radius: 0px;
 }
 
+.timer {
+  margin-top: 10px;
+}
+
+.timer > svg {
+  width: 200px;
+  height: 200px;
+}
+
+.timer > svg > circle {
+  fill: none;
+  stroke-opacity: 0.3;
+  stroke: #0d6efd;
+  stroke-width: 10;
+  transform-origin: center center;
+  transform: rotate(-90deg);
+}
+
+.timer > svg > circle + circle {
+  stroke-dasharray: 1;
+  stroke-dashoffset: 1;
+  stroke-linecap: round;
+  stroke-opacity: 1;
+}
+
+.timer.animatable > svg > circle + circle {
+  transition: stroke-dashoffset 0.3s ease;
+}
+
+.timer > svg > text {
+  font-size: 2rem;
+}
+
+.timer > svg > text + text {
+  font-size: 1rem;
+}
+
 /* cart badge */
+a {
+  color: tomato;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #2196f3;
+}
+
+/*----------------------------
+BIG HEADER
+------------------------------*/
+.big-header {
+  padding: 2em 0;
+  position: relative;
+  text-align: center;
+}
+
+.big-header:after {
+  content:"";
+  display:block;
+  height:1px;
+  background:#eee;
+  position:absolute; 
+  left:30%; right:30%;
+  bottom: 0;
+}
+
+.big-header h1 {
+  font-size:2.75em;
+  font-weight:300;
+  margin-bottom:0.2em;
+}
+
+.big-header p {
+  font-size: 16px;
+}
+
+.big-header p.sub {
+  font-size: 12px;
+  color: #9999;
+}
+
+.note {
+  margin: 20px 0;
+  padding: 10px;
+  color: #888;
+  background-color: #fefefe;
+  font-size: 12px;
+  border-left: 5px solid tomato;
+}
+
+
+/* Widget Container */
+#widget {
+  position: relative;
+  padding: 20px 0;
+  margin: 20px 0;
+  border: 1px solid #eee;
+  border-width: 0;
+}
+
+
+/*----------------------------
+Rating Star Widget Style
+-----------------------------*/
+.rating-stars {
+  position: relative;
+  display: block;
+  text-align: center;
+}
+
+.rating-stars .star {
+  display: inline-block;
+  padding: 0 5px;
+  font-size: 2.5em;
+  color: #ccc;
+  
+  transition: 0.1s all ease-in-out;
+  transform: scale(0.8);
+}
+.rating-stars .star:hover,
+.rating-stars .star.semi-active {
+  color: #ffd73e;
+  transform: scale(1);
+}
+
+.rating-stars .star.active {
+  color: #FF9800;
+  transform: scale(1);
+}
+.star:hover{
+  position: relative; 
+  top: -10px;
+}
+.star{
+  position: relative;
+  top: 0;
+  width: 60px;
+}
+.crown{
+  position: relative;
+  z-index: 1000 !important;
+  width: 60px;
+  top: 20px;
+  left: -30px;
+  transform: rotate(-50deg);
+}
+.crown2{
+  position: relative;
+  z-index: 1000 !important;
+  width: 60px;
+  top: 20px;
+  left: -30px;
+  transform: rotate(-50deg);
+  visibility: hidden;
+}
+.makeStyles-productDescription-26{
+height: 50px !important;
+}
+.go{
+  
+  width: 100%;
+  text-align: center;
+}
+/* Rating Message */
+.after-rating-message {
+  display: none;
+  text-align: center;
+  margin: 20px auto;
+  padding: 20px 20px;
+  background-color: #f7f7f7;
+  opacity: 0;
+  transition: 0.2s all ease-in-out;
+}
+
+.after-rating-message.show {
+  display: block;
+  opacity: 1;
+}
 
 .cart-badge,
 .cart-badge:hover {
